<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:background="@mipmap/splash_bg"
    android:orientation="vertical"
    android:layout_height="match_parent">
    <Button
        android:id="@+id/bt_back"
        android:layout_width="@dimen/btBackWidth"
        android:layout_height="@dimen/btBackHeight"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/bt_back_grey" />
    <ImageView
        android:id="@+id/iv_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:src = "@mipmap/splash_logo"
        android:layout_marginTop="30dp"/>
    <LinearLayout
        android:orientation="vertical"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_below="@id/iv_logo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/et_phoneNum"
            android:hint="@string/phoneNum"
            android:textColor="@color/textColor"
            android:paddingBottom="15dp"
            android:singleLine="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <RelativeLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/et_auth_code"
                android:hint="@string/authCode"
                android:singleLine="true"
                android:textColor="@color/textColor"
                android:layout_marginTop="15dp"
                android:layout_width="match_parent"
                android:paddingBottom="15dp"
                android:layout_height="wrap_content" />
            <Button
                android:id="@+id/bt_acquire_auth_code"
                android:layout_centerVertical="true"
                android:text="@string/acquireAuthCode"
                android:textColor="@color/white"
                android:layout_alignParentRight="true"
                android:textSize="10sp"
                android:background="@drawable/register_rect_bg_grey"
                android:layout_width="72dp"
                android:layout_height="18dp" />
        </RelativeLayout>
        <EditText
            android:id="@+id/et_password"
            android:layout_below="@id/et_auth_code"
            android:hint="@string/loginPassword"
            android:singleLine="true"
            android:textColor="@color/textColor"
            android:layout_marginTop="15dp"
            android:layout_width="match_parent"
            android:paddingBottom="15dp"
            android:layout_height="wrap_content" />
        <EditText
            android:id="@+id/et_confirm_password"
            android:layout_below="@id/et_password"
            android:hint="@string/confirmPassword"
            android:singleLine="true"
            android:textColor="@color/textColor"
            android:layout_marginTop="15dp"
            android:layout_width="match_parent"
            android:paddingBottom="15dp"
            android:layout_height="wrap_content" />
        <EditText
            android:id="@+id/et_invite_code"
            android:layout_below="@id/et_confirm_password"
            android:hint="@string/invitedCode"
            android:singleLine="true"
            android:textColor="@color/textColor"
            android:layout_marginTop="15dp"
            android:layout_width="match_parent"
            android:paddingBottom="15dp"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <RelativeLayout
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_above="@id/bt_submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <CheckBox
            android:id="@+id/cb_agree"
            android:layout_alignParentLeft="true"
            android:checked="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/tv_user_protocol"
            android:layout_centerVertical="true"
            android:layout_marginLeft="13.5dp"
            android:layout_toRightOf="@id/cb_agree"
            android:text="@string/userProtocol"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </RelativeLayout>
<Button
    android:id="@+id/bt_submit"
    android:layout_alignParentBottom="true"
    android:textSize="15sp"
    android:textColor="@color/white"
    android:text="@string/sumbit"
    android:background="@color/colorPrimary"
    android:layout_width="match_parent"
    android:layout_height="55dp" />
</RelativeLayout>