<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:background="@mipmap/splash_bg"
    android:layout_height="match_parent">
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:src = "@mipmap/splash_logo"
        android:layout_marginTop="82.5dp"/>
    <Button
        android:id="@+id/bt_back"
        android:layout_width="@dimen/btBackWidth"
        android:layout_height="@dimen/btBackHeight"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/bt_back_grey" />

    <RelativeLayout
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <EditText
            android:id="@+id/et_phoneNum"
            android:hint="@string/phoneNum"
            android:textColor="@color/textColor"
            android:paddingBottom="20dp"
            android:singleLine="true"
            android:layout_marginTop="200dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <EditText
            android:id="@+id/et_password"
            android:layout_below="@id/et_phoneNum"
            android:hint="@string/password"
            android:singleLine="true"
            android:textColor="@color/textColor"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:paddingBottom="20dp"
            android:layout_height="wrap_content" />
        <Button
            android:id="@+id/bt_login"
            android:layout_width="@dimen/btSubmitWidth"
            android:layout_height="@dimen/btSubmitHeight"
            android:layout_below="@+id/et_password"
            android:layout_marginTop="30dp"
            android:background="@drawable/splash_bg_bt_blue"
            android:text="@string/login"
            android:textColor="@color/white"
            android:textSize="15sp" />
        <TextView
            android:id="@+id/tv_fastRegister"
            android:layout_below="@+id/bt_login"
            android:layout_marginTop="24dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/textColor"
            android:text="@string/fastRegister" />
        <TextView
            android:id="@+id/tv_fogetPassword"
            android:layout_below="@+id/bt_login"
            android:layout_alignParentRight="true"
            android:layout_marginTop="24dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/textColor"
            android:text="@string/fogetPassword" />
    </RelativeLayout>

</RelativeLayout>