<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background="@color/white"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <android.support.v7.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:minHeight="?attr/actionBarSize"
        android:layout_marginBottom="1dp"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:theme="@style/ThemeOverlay.AppCompat.ActionBar">
        <ImageView
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="20dp"
            android:id="@+id/iv_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingRight="12dp"
            android:src="@mipmap/bt_back_grey" />
        <TextView
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="找回密码"
            android:textSize="20sp" />
    </android.support.v7.widget.Toolbar>
    <View
        android:background="@color/grey"
        android:layout_width="match_parent"
        android:layout_height="1dp"/>
    <LinearLayout
        android:layout_marginRight="15dp"
        android:layout_marginLeft="15dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText

            android:id="@+id/et_phoneNum"
            android:hint="@string/phoneNum"
            android:textColor="@color/textColor"
            android:layout_marginTop="15dp"
            android:paddingBottom="20dp"
            android:singleLine="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <RelativeLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/et_auth_code"
                android:hint="@string/authCode"
                android:singleLine="true"
                android:textColor="@color/textColor"
                android:layout_marginTop="15dp"
                android:layout_width="match_parent"
                android:paddingBottom="15dp"
                android:layout_height="wrap_content" />
            <Button
                android:id="@+id/bt_acquire_auth_code"
                android:layout_centerVertical="true"
                android:text="@string/acquireAuthCode"
                android:textColor="@color/white"
                android:layout_alignParentRight="true"
                android:textSize="10sp"
                android:background="@mipmap/register_rect_bg_grey"
                android:layout_width="72dp"
                android:layout_height="18dp" />
        </RelativeLayout>
        <EditText
            android:id="@+id/et_password"
            android:layout_below="@id/et_auth_code"
            android:hint="新密码"
            android:singleLine="true"
            android:textColor="@color/textColor"
            android:layout_marginTop="15dp"
            android:paddingBottom="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <EditText
            android:id="@+id/et_confirm_password"
            android:layout_below="@id/et_password"
            android:hint="@string/confirmPassword"
            android:singleLine="true"
            android:textColor="@color/textColor"
            android:layout_marginTop="15dp"
            android:paddingBottom="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <EditText
            android:id="@+id/et_id_num_last_six"
            android:layout_below="@id/et_confirm_password"
            android:hint="@string/idNumeLastSix"
            android:singleLine="true"
            android:textColor="@color/textColor"
            android:layout_marginTop="15dp"
            android:paddingBottom="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <Button
            android:id="@+id/bt_finish"
            android:textSize="15sp"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="15dp"
            android:background="@mipmap/splash_bg_bt_blue"
            android:textColor="@color/white"
            android:text="@string/finish"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>
</LinearLayout>